jooq and hibernate co-existing in test db

--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     integrationTestCompile libs.jackson_annotations
     integrationTestCompile libs.dropwizard_flyway
     integrationTestCompile project(':stroom-query-hibernate')
+    integrationTestCompile project(':stroom-query-jooq')
     integrationTestRuntime libs.mariadb_connector
     integrationTestRuntime 'org.apache.derby:derby:10.8.2.2'
 }
