--- a/stroomQueryTestDb.yml
+++ b/stroomQueryTestDb.yml
@@ -2,11 +2,11 @@ version: '2.1'
 
 services: 
 
-  stroom-annotations-db:
+  stroom-query-test-hibernate-db:
     image:  "${MARIADB_DOCKER_REPO:-mariadb}:10.3.0"
-    container_name: stroom-query-test-db
+    container_name: stroom-query-test-hibernate-db
     ports:
-        # Expose mysql on 3310 to the host so as not to conflict with stroom-db, stroom-stats-db, stroom-auth-db
+        # Expose mysql on 4450
       - "4450:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
