--- a/stroomQueryTestDb.yml
+++ b/stroomQueryTestDb.yml
@@ -2,9 +2,9 @@ version: '2.1'
 
 services: 
 
-  stroom-query-test-hibernate-db:
+  stroom-query-test-db:
     image:  "${MARIADB_DOCKER_REPO:-mariadb}:10.3.0"
-    container_name: stroom-query-test-hibernate-db
+    container_name: stroom-query-test-db
     ports:
         # Expose mysql on 4450
       - "4450:3306"
