got the jooq implementation working with search

--- a/build.gradle
+++ b/build.gradle
@@ -224,6 +224,16 @@ project(':stroom-query-hibernate') {
     }
 }
 
+project(':stroom-query-jooq') {
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+            }
+        }
+    }
+}
+
 project(':stroom-query-testing') {
     publishing {
         publications {
