--- a/stroom-query-testing/src/integration-test/resources/jooq_noauth/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/jooq_noauth/config.yml
@@ -15,16 +15,25 @@ database:
   user: stroomuser
   password: stroompassword1
   url: jdbc:mariadb://localhost:4450/test
-  maxWaitForConnection: 1s
-  validationQuery: "/* MyApplication Health Check */ SELECT 1"
-  minSize: 8
-  maxSize: 32
-  checkConnectionWhileIdle: false
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLInnoDBDialect
     hibernate.show_sql: false
     hibernate.hbm2ddl.auto: validate
+
+jooq:
+  dialect: MYSQL
+  logExecutedSql: yes
+  renderSchema: yes
+  renderNameStyle: QUOTED
+  renderKeywordStyle: LOWER
+  renderFormatted: no
+  paramType: INDEXED
+  statementType: PREPARED_STATEMENT
+  executeLogging: no
+  executeWithOptimisticLocking: no
+  attachRecords: yes
+  updatablePrimaryKeys: no
 
 logging:
   level: ERROR
