trying to thin out how much stuff inheritors need to use

--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     //--------3rd party--------
     compile libs.dropwizard_core
     compile libs.dropwizard_hibernate
+    compile libs.dropwizard_flyway
     compile libs.slf4j_api
 }
