--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ ext.libs = [
     dropwizard_jooq: "com.bendb.dropwizard:dropwizard-jooq:$versions.dropwizard_jooq",
     dropwizard_flyway: 'io.dropwizard.modules:dropwizard-flyway:1.0.0-1',
     dropwizard_testing: "io.dropwizard:dropwizard-testing:$versions.dropwizard",
+    guice: "com.google.inject:guice:4.0",
     jackson_annotations: "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
     jackson_core: "com.fasterxml.jackson.core:jackson-core:$versions.jackson",
     jackson_databind: "com.fasterxml.jackson.core:jackson-databind:$versions.jackson", 
