--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,20 @@ ext.versions = [
     eventLogging: 'v3.1.2_schema-v3.1.2',
 
     //------------3rd-party------------
-    dropwizard: '1.2.0',
-    jooq: '3.9.3',
+    dropwizard: '1.2.5',
     dropwizard_jooq:'1.1.0-0',
+    dropwizard_metrics: '3.2.5',
+    flyway: '4.0.3',
+    glassfish: '2.5.0-b32',
+    hamcrest: '1.3',
     jackson: '2.8.6',
+    javax_inject: '1',
+    javax_annotation: '1.2',
+    javax_ws: '2.0.1',
+    javax_servlet: '3.1.0',
+    jersey: '2.25.1',
+    jooq: '3.9.3',
+    jose4j: '0.5.2',
     logback: '1.2.1', //in line with dropwizard 1.1.0
     kafka: '0.10.0.1',
     slf4j: '1.7.24', //in line with dropwizard 1.1.0
@@ -46,17 +56,33 @@ ext.libs = [
     assertj: 'org.assertj:assertj-core:3.8.0',
     dropwizard_core: "io.dropwizard:dropwizard-core:$versions.dropwizard",
     dropwizard_hibernate: "io.dropwizard:dropwizard-hibernate:$versions.dropwizard",
+    dropwizard_db: "io.dropwizard:dropwizard-db:$versions.dropwizard",
     dropwizard_auth: "io.dropwizard:dropwizard-auth:$versions.dropwizard",
     dropwizard_auth_jwt: "com.github.toastshaman:dropwizard-auth-jwt:1.0.2-0",
     dropwizard_jooq: "com.bendb.dropwizard:dropwizard-jooq:$versions.dropwizard_jooq",
+    dropwizard_logging: "io.dropwizard:dropwizard-logging:$versions.dropwizard",
     dropwizard_flyway: 'io.dropwizard.modules:dropwizard-flyway:1.0.0-1',
+    dropwizard_metrics: "io.dropwizard.metrics:metrics-annotation:$versions.dropwizard_metrics",
     dropwizard_testing: "io.dropwizard:dropwizard-testing:$versions.dropwizard",
+    flyway_core : "org.flywaydb:flyway-core:$versions.flyway",
+    glassfish_hk2: "org.glassfish.hk2:hk2-api:$versions.glassfish",
     guava: "com.google.guava:guava:21.0", //>=v21 removes MoreExecutors.sameThreadExecutor() which is needed by curator 2.11
     guice: "com.google.inject:guice:4.2.0",
+    google_findbugs: "com.google.code.findbugs:jsr305:3.0.2",
+    hamcrest_core: "org.hamcrest:hamcrest-core:$versions.hamcrest",
+    hibernate_core: "org.hibernate:hibernate-core:5.2.12.Final",
+    hibernate_jpa: "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final",
     jackson_annotations: "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
     jackson_core: "com.fasterxml.jackson.core:jackson-core:$versions.jackson",
-    jackson_databind: "com.fasterxml.jackson.core:jackson-databind:$versions.jackson", 
+    jackson_databind: "com.fasterxml.jackson.core:jackson-databind:$versions.jackson",
+    javax_inject: "javax.inject:javax.inject:$versions.javax_inject",
+    javax_annotation: "javax.annotation:javax.annotation-api:$versions.javax_annotation",
+    javax_ws: "javax.ws.rs:javax.ws.rs-api:$versions.javax_ws",
+    javax_servlet: "javax.servlet:javax.servlet-api:$versions.javax_servlet",
+    jersey_client: "org.glassfish.jersey.core:jersey-client:$versions.jersey",
+    jersey_server: "org.glassfish.jersey.core:jersey-server:$versions.jersey",
     junit: "junit:junit:4.12",
+    jose4j: "org.bitbucket.b_c:jose4j:$versions.jose4j",
     jooq: "org.jooq:jooq:$versions.jooq",
     logback_classic: "ch.qos.logback:logback-classic:$versions.logback",
     logback_core: "ch.qos.logback:logback-core:$versions.logback",
@@ -108,6 +134,7 @@ def pomConfig = {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: 'ca.cutterslade.analyze'
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
@@ -116,11 +143,6 @@ subprojects {
         jcenter()
         maven { url "https://dl.bintray.com/stroom/event-logging" }
         maven { url "https://dl.bintray.com/stroom/stroom" }
-    }
-
-    dependencies {
-        testCompile libs.junit
-        testCompile libs.mockito_core
     }
 
     task sourcesJar(type: Jar, dependsOn: classes) {
@@ -187,6 +209,16 @@ subprojects {
 }
 
 project(':stroom-query-api') {
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+            }
+        }
+    }
+}
+
+project(':stroom-query-authorisation') {
     publishing {
         publications {
             mavenJava(MavenPublication) {
