--- a/stroom-query-jooq/build.gradle
+++ b/stroom-query-jooq/build.gradle
@@ -15,15 +15,26 @@
  */
 
 dependencies {
-    //--------Project----------
+//--------Project----------
     compile project(':stroom-query-api')
     compile project(':stroom-query-common')
     compile project(':stroom-query-audit')
+    compile project(':stroom-query-authorisation')
+
+    // ------- Stroom ---------
+    compile libs.stroomExpression
 
     //--------3rd party--------
     compile libs.dropwizard_core
     compile libs.dropwizard_jooq
+    compile libs.dropwizard_db
     compile libs.dropwizard_flyway
+    compile libs.flyway_core
+    compile libs.guava
     compile libs.guice
+    compile libs.javax_inject
+    compile libs.jooq
     compile libs.slf4j_api
+
+    testCompile libs.junit
 }
