--- a/build.gradle
+++ b/build.gradle
@@ -21,17 +21,17 @@ ext.versions = [
     stroomQuery: getPropertyOrDefault('version', 'SNAPSHOT'),
 
     //------Stroom-libs---------------
-    stroomExpression: 'v1.3.1',
+    stroomExpression: 'SNAPSHOT',
     eventLogging: 'v3.1.2_schema-v3.1.2',
 
     //------------3rd-party------------
-    dropwizard: '1.2.0',
+    dropwizard: '1.2.5',
     dropwizard_jooq:'1.1.0-0',
     dropwizard_metrics: '3.2.5',
     flyway: '4.0.3',
     glassfish: '2.5.0-b32',
     hamcrest: '1.3',
-    jackson: '2.8.6',
+    jackson: '2.9.0',
     javax_inject: '1',
     javax_annotation: '1.2',
     javax_ws: '2.0.1',
@@ -39,9 +39,9 @@ ext.versions = [
     jersey: '2.25.1',
     jooq: '3.9.3',
     jose4j: '0.5.2',
-    logback: '1.2.1', //in line with dropwizard 1.1.0
+    logback: '1.2.3', //in line with dropwizard 1.2.5
     kafka: '0.10.0.1',
-    slf4j: '1.7.24', //in line with dropwizard 1.1.0
+    slf4j: '1.7.25', //in line with dropwizard 1.2.5
     swagger: '1.5.16',
     zzDUMMYzz: 'makes sorting this list easier'
 ]
