--- a/stroom-query-testing/src/integration-test/resources/generic_noauth/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/generic_noauth/config.yml
@@ -28,12 +28,12 @@ logging:
       timeZone: UTC
 
 token:
-  publicKeyUrl: http://localhost:10080/testAuthService/publicKey
+  publicKeyUrl: http://localhost:${port}/testAuthService/publicKey
   jwsIssuer: stroomJOE
   algorithm: RS256
   skipAuth: true
 
 
 authorisationService:
-  url: http://localhost:10080/api/authorisation/v1
+  url: http://localhost:${port}/api/authorisation/v1
   isAuthorisedPath: /isAuthorised
