--- a/stroom-query-testing/src/integration-test/resources/hibernate_noauth/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/hibernate_noauth/config.yml
@@ -39,12 +39,12 @@ logging:
       timeZone: UTC
 
 token:
-  publicKeyUrl: http://localhost:${port}/testAuthService/publicKey
+  publicKeyUrl: NOT_EXPECTED_TO_BE_USED
   jwsIssuer: stroom
   algorithm: RS256
   skipAuth: true
 
 
 authorisationService:
-  url: http://localhost:${port}/api/authorisation/v1
+  url: NOT_EXPECTED_TO_BE_USED
   isAuthorisedPath: /isAuthorised
