--- a/stroom-query-testing/src/integration-test/resources/jooq/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/jooq/config.yml
@@ -53,11 +53,11 @@ logging:
       timeZone: UTC
 
 token:
-  publicKeyUrl: http://localhost:${port}/testAuthService/publicKey
+  publicKeyUrl: TO_BE_REPLACED_BY_CONFIG_OVERRIDES
   jwsIssuer: stroom
   algorithm: RS256
 
 
 authorisationService:
-  url: http://localhost:${port}/api/authorisation/v1
+  url: TO_BE_REPLACED_BY_CONFIG_OVERRIDES
   isAuthorisedPath: /isAuthorised
