--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+ext.moduleName = 'stroom.query.common'
+
 dependencies {
     //--------Project----------
     compile project(':stroom-query-api')
@@ -27,6 +29,7 @@ dependencies {
     compile libs.jackson_annotations
     compile libs.jackson_core
     compile libs.slf4j_api
+    compile libs.jaxb_api
 
     //--------testing----------
     testCompile libs.assertj
