--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+ext.moduleName = 'stroom.query.hibernate'
+
 dependencies {
     //--------Project----------
     compile project(':stroom-query-api')
