--- a/stroom-query-jooq/build.gradle
+++ b/stroom-query-jooq/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+ext.moduleName = 'stroom.query.jooq'
+
 dependencies {
 //--------Project----------
     compile project(':stroom-query-api')
