--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -13,6 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+ext.moduleName = 'stroom.query.testing'
+
 sourceSets {
     // This lets us use different directories for our integration tests.
     integrationTest {
