--- a/stroom-query-sample/build.gradle
+++ b/stroom-query-sample/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'com.benjaminsproule.swagger'
 
 dependencies {
     //--------Project----------
+    compile project(':stroom-docref')
     compile project(':stroom-query-api')
 
     //--------3rd party--------
