--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext.versions = [
         flyway            : '4.0.3',
         glassfish         : '2.5.0-b32',
         guava             : '21.0',
-        jackson           : '2.9.1',
+        jackson           : '2.9.1', //in line with dropwizard 1.2.2
         javax_inject      : '1',
         javax_ws          : '2.0.1',
         javax_servlet     : '3.1.0',
@@ -172,7 +172,6 @@ subprojects {
             exclude group: "org.jboss.logging", module: "jboss-logging"
             exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
 //            exclude group: "com.google.guava", module: "guava"
-
 
 //            exclude group: "ch.qos.logback", module: "logback-core"
 //            exclude group: "log4j", module: "log4j"
@@ -348,15 +347,17 @@ subprojects {
             options.addStringOption('-module-path', classpath.asPath)
             options.addStringOption('Xdoclint:all,-missing', '-html5')
         }
+
+        jar {
+            inputs.property("moduleName", moduleName)
+            manifest {
+                attributes(
+                        "Automatic-Module-Name": moduleName,
+                )
+            }
+            version versions.stroomQuery
+        }
     }
-
-
-
-
-
-
-
-
 
 
 }
