--- a/stroom-query-audit/build.gradle
+++ b/stroom-query-audit/build.gradle
@@ -18,6 +18,7 @@ ext.moduleName = 'stroom.query.audit'
 
 dependencies {
     //--------Project----------
+    compile project(':stroom-docref')
     compile project(':stroom-query-api')
     compile project(':stroom-query-common')
     compile project(':stroom-query-authorisation')
