--- a/stroom-query-authorisation/build.gradle
+++ b/stroom-query-authorisation/build.gradle
@@ -19,7 +19,6 @@ ext.moduleName = 'stroom.query.authorisation'
 dependencies {
     //--------Project----------
     compile project(':stroom-docref')
-    compile project(':stroom-query-api')
 
     //--------3rd party--------
     compile libs.glassfish_hk2
@@ -33,5 +32,5 @@ dependencies {
     compile libs.dropwizard_auth_jwt
     compile libs.slf4j_api
 
-    testCompile libs.junit
+    testCompile libs.junit_jupiter_api
 }
