--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -34,6 +34,6 @@ dependencies {
 
     //--------testing----------
     testCompile libs.assertj
-    testCompile libs.junit
+    testCompile libs.junit_jupiter_api
     testCompile libs.mockito_core
 }
