--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     compile libs.javax_inject
     compile libs.slf4j_api
 
-    testCompile libs.junit
+    testCompile libs.junit_jupiter_api
 }
