--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     compile libs.javax_ws;
     compile libs.jackson_core
     compile libs.jackson_databind
-    compile libs.junit
+    compile libs.junit_jupiter_api
+    compile libs.junit4
     compile libs.jose4j
     compile libs.slf4j_api
     compile libs.wiremock
