--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ ext.versions = [
         stroomQuery       : getPropertyOrDefault('version', 'SNAPSHOT'),
 
         //------Stroom-libs---------------
-        stroomExpression  : 'v1.4.10',
-        eventLogging      : 'v4.0.5_schema-v3.2.4',
+        stroomExpression  : 'v1.4.11',
+        eventLogging      : 'v4.0.6_schema-v3.2.4',
 
         //------------3rd-party------------
         dropwizard        : '1.3.3',
@@ -36,6 +36,7 @@ ext.versions = [
         javax_ws          : '2.0.1',
         javax_servlet     : '3.1.0',
         jersey            : '2.25.1',
+        jetty             : '9.4.8.v20171121', //in line with dropwizard 1.2.2
         jooq              : '3.9.3',
         jose4j            : '0.5.2',
         junit             : '5.2.0',
@@ -81,6 +82,7 @@ ext.libs = [
         jaxb_api            : "javax.xml.bind:jaxb-api:2.3.0",
         jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
+        jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
         junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
@@ -101,9 +103,11 @@ buildscript {
     repositories {
         mavenLocal()
         jcenter()
+        maven { url "https://dl.bintray.com/stroom/stroom" }
     }
     dependencies {
-        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
+        // A fork of https://github.com/wfhartford/gradle-dependency-analyze that works with Java 10
+        classpath 'stroom:gradle-dependency-analyze:v2.2.2'
         classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.4'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
@@ -130,13 +134,16 @@ def pomConfig = {
     }
 }
 
+//must be applied to all projects including root
+apply plugin: 'ca.cutterslade.analyze'
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'ca.cutterslade.analyze'
     apply plugin: 'com.jfrog.bintray'
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_1_10
+    targetCompatibility = JavaVersion.VERSION_1_10
 
     configurations {
 
@@ -301,10 +308,10 @@ subprojects {
 //            }
 //        }
 //
-//        javadoc {
-//            options.addStringOption('-module-path', classpath.asPath)
-//            options.addStringOption('Xdoclint:all,-missing', '-html5')
-//        }
+        javadoc {
+            options.addStringOption('-module-path', classpath.asPath)
+            options.addStringOption('Xdoclint:all,-missing', '-html5')
+        }
 
         jar {
             inputs.property("moduleName", moduleName)
