--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext.versions = [
         eventLogging      : 'v4.0.6_schema-v3.2.4',
 
         //------------3rd-party------------
-        dropwizard        : '1.3.3',
+        dropwizard        : '1.3.5',
         dropwizard_jooq   : '1.1.0-0',
         dropwizard_metrics: '4.0.2',
         flyway            : '4.0.3',
@@ -84,7 +84,6 @@ ext.libs = [
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
         jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
-        junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
         logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
@@ -272,42 +271,42 @@ subprojects {
             jcenter()
         }
 
-//        compileJava {
-//            inputs.property("moduleName", moduleName)
-//            doFirst {
-//                options.compilerArgs = [
-//                        '--module-path', classpath.asPath,
-//                ]
-//                classpath = files()
-//            }
-//        }
-//
-//        compileTestJava {
-//            inputs.property("moduleName", moduleName)
-//            doFirst {
-//                options.compilerArgs = [
-//                        '--module-path', classpath.asPath,
-////                        '--add-modules', 'junit',
-////                        '--add-reads', "$moduleName=junit",
-//                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-//                ]
-//                classpath = files()
-//            }
-//        }
-//
-//        test {
-//            inputs.property("moduleName", moduleName)
-//            doFirst {
-//                jvmArgs = [
-//                        '--module-path', classpath.asPath,
-//                        '--add-modules', 'ALL-MODULE-PATH',
-////                        '--add-reads', "$moduleName=junit",
-//                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-//                ]
-//                classpath = files()
-//            }
-//        }
-//
+        compileJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        compileTestJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+//                        '--add-modules', 'junit',
+//                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        test {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+//                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
         javadoc {
             options.addStringOption('-module-path', classpath.asPath)
             options.addStringOption('Xdoclint:all,-missing', '-html5')
