--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,13 @@ ext.versions = [
         eventLogging      : 'v4.0.6_schema-v3.2.4',
 
         //------------3rd-party------------
-        dropwizard        : '1.3.5',
+        dropwizard        : '1.2.2',
         dropwizard_jooq   : '1.1.0-0',
-        dropwizard_metrics: '4.0.2',
+        dropwizard_metrics: '3.2.5',
         flyway            : '4.0.3',
         glassfish         : '2.5.0-b32',
         guava             : '21.0',
-        jackson           : '2.9.5', //in line with dropwizard 1.3.3
+        jackson           : '2.9.1', //in line with dropwizard 1.2.2
         javax_inject      : '1',
         javax_ws          : '2.0.1',
         javax_servlet     : '3.1.0',
@@ -40,9 +40,9 @@ ext.versions = [
         jooq              : '3.9.3',
         jose4j            : '0.5.2',
         junit             : '5.2.0',
-        logback           : '1.2.3', //in line with dropwizard 1.3.3
+        logback           : '1.2.3', //in line with dropwizard 1.2.2
         kafka             : '0.10.0.1',
-        slf4j             : '1.7.25', //in line with dropwizard 1.3.3
+        slf4j             : '1.7.25', //in line with dropwizard 1.2.2
         swagger           : '1.5.16',
         zzDUMMYzz         : 'makes sorting this list easier'
 ]
@@ -70,7 +70,6 @@ ext.libs = [
         glassfish_hk2       : "org.glassfish.hk2:hk2-api:$versions.glassfish",
         guava               : "com.google.guava:guava:$versions.guava", //>=v21 removes MoreExecutors.sameThreadExecutor() which is needed by curator 2.11
         guice               : "com.google.inject:guice:4.2.0",
-        google_findbugs     : "com.google.code.findbugs:jsr305:3.0.2",
         hibernate_core      : "org.hibernate:hibernate-core:5.2.12.Final",
         hibernate_jpa       : "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final",
         jackson_annotations : "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
@@ -84,6 +83,7 @@ ext.libs = [
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
         jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+        junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
         logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
@@ -155,6 +155,7 @@ subprojects {
             exclude group: "commons-logging", module: "commons-logging"
             exclude group: "org.jboss.logging", module: "jboss-logging"
             exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
+            exclude group: "com.google.code.findbugs", module: "jsr305"
 //            exclude group: "com.google.guava", module: "guava"
 
 //            exclude group: "ch.qos.logback", module: "logback-core"
